# jurni-backend

./: .env.example  .firebaserc  .gitignore  G_HACK.postman_collection.json  README.md  firebase.json  input.json  pyproject.toml  run.sh  server.py
app/: main.py
app/models/: trip.py
app/routes/: auth.py  travel_planner.py  trips.py
app/services/: adk_travel_planner_service.py  firebase_service.py  response_parser.py
app/travel_planner_agent/: agent.py
app/travel_planner_agent/shared_libraries/: types.py
app/travel_planner_agent/sub_agents/in_trip/: agent.py  prompt.py
app/travel_planner_agent/sub_agents/inspiration/: agent.py
app/travel_planner_agent/sub_agents/planning/: agent.py  prompt.py
app/travel_planner_agent/sub_agents/post_trip/: agent.py
functions/: main.py  requirements.txt
functions/app/: main.py
functions/app/auth/: middleware.py
functions/app/models/: user.py
functions/app/routes/: trips.py
functions/app/services/: firebase_service.py  flight_service.py
functions/app/travel_planner_agent/: prompt.py
functions/app/travel_planner_agent/sub_agents/booking/: agent.py
functions/app/travel_planner_agent/sub_agents/in_trip/: tools.py
functions/app/travel_planner_agent/sub_agents/inspiration/: agent.py  prompt.py
functions/app/travel_planner_agent/sub_agents/planning/: agent.py
functions/app/travel_planner_agent/sub_agents/pre_trip/: agent.py
functions/app/travel_planner_agent/tools/: memory.py
functions/app/utils/: env.py
